--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
+    <div class="panel panel-default">
+        <div class="panel-body">
+           Basic panel example
+        </div>
+    </div>
     
     <script src="demo.js"></script>
 </body>
